<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="Đơn hàng "
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="70dp"
            android:layout_marginLeft="150dp"
            android:text="Xem lịch sử đơn hàng"
            android:textSize="12sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:contentDescription="@string/ic_next_to"
            android:src="@drawable/ic_next_to" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="6dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#DCDCDC"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Chờ lấy hàng "
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#DCDCDC"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Đơn hủy  "
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#DCDCDC"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Trả hàng/Hoàn tiền "
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#DCDCDC"
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="0" />

            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Phản hồi đánh giá  "
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff">

        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtn_my_product"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="#FB0C0C"
                    android:contentDescription="@string/img_my_product"
                    android:src="@drawable/ic_shop" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Sản phẩm của tôi  "
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imgBtn_oder"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="#FFC107"
                    android:contentDescription="@string/img_finance"
                    android:src="@drawable/ic_currency" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Đơn hàng  "
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imgBtn_customer"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="#E11D1D"
                    android:contentDescription="@string/imgBtn_customer"
                    android:src="@drawable/ic_chart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Khách hàng"
                    android:textSize="10sp" />
            </LinearLayout>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="#244CDC"
                    android:src="@drawable/ic_device" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Kênh Marketing"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="#FFC107"
                    android:src="@drawable/ic_discount" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Đặt quyền Shop   "
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="#218E6E"
                    android:src="@drawable/ic_supports" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Trung tâm hỗ trợ "
                    android:textSize="10sp" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_notification">

        </de.hdodenhof.circleimageview.CircleImageView>
    </RelativeLayout>

</LinearLayout>